<resources>
    <string name="app_name">EqualOpportuna</string>
    <string-array name="job_titles">
        <item>demo_job1</item>
        <item>demo_job2</item>
        <item>demo_job3</item>
        <item>demo_job4</item>
        <item>demo_job5</item>
        <item>demo_job6</item>
        <item>demo_job7</item>
        <item>demo_job8</item>
        <item>demo_job9</item>
        <item>demo_job10</item>
    </string-array>
    <string-array name="company_name">
        <item>demo_company1</item>
        <item>demo_company2</item>
        <item>demo_company3</item>
        <item>demo_company4</item>
        <item>demo_company5</item>
        <item>demo_company6</item>
        <item>demo_company7</item>
        <item>demo_company8</item>
        <item>demo_company9</item>
        <item>demo_company10</item>
    </string-array>
    <string-array name="job_location">
        <item>demo_location1</item>
        <item>demo_location2</item>
        <item>demo_location3</item>
        <item>demo_location4</item>
        <item>demo_location5</item>
        <item>demo_location6</item>
        <item>demo_location7</item>
        <item>demo_location8</item>
        <item>demo_location9</item>
        <item>demo_location10</item>
    </string-array>
    <string-array name="TVforumUsername">
        <item>dummy_username1</item>
        <item>dummy_username2</item>
        <item>dummy_username3</item>
        <item>dummy_username4</item>
        <item>dummy_username5</item>
        <item>dummy_username6</item>
        <item>dummy_username7</item>
        <item>dummy_username8</item>
        <item>dummy_username9</item>
        <item>dummy_username10</item>
    </string-array>
    <string-array name="TVforumPost">
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>testing testing testing</item>
    </string-array>
    <string-array name="TVcourseName">

        <item>name1</item>
        <item>name2</item>
        <item>name3</item>
        <item>name4</item>
        <item>name5</item>
        <item>name6</item>


    </string-array>
    <string-array name="TVcourseDate">

        <item>date1</item>
        <item>date2</item>
        <item>date3</item>
        <item>date4</item>
        <item>date5</item>
        <item>date6</item>


    </string-array>
    <string-array name="TVcourseFeedback">
        <item>feedback1</item>
        <item>feedback2</item>
        <item>feedback3</item>
        <item>feedback4</item>
        <item>feedback5</item>
        <item>feedback6</item>


    </string-array>
    <string name="string1">Welcome to EOApp!</string>
    <string name="string2">Forgot your password or e-mail</string>
    <string name="string3">change login method</string>
    <string name="string4">e-mail</string>
    <string name="string5">password</string>
    <string name="string6">1.0.0</string>
    <string name="string7">Login</string>
    <string name="string8">Accounts</string>
    <string name="String9">Describe</string>
    <string name="department">Department</string>
    <string name="describe">Describe</string>
    <string name="data_scientist">data scientist</string>
    <string name="hintstyle">Hintstyle</string>
    <string name="sales">Sales</string>
    <string name="example1">example1</string>
    <string name="software_developer">software developer</string>
    <string name="department_selection">Department selection</string>
    <string name="example2">example1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search Here ....</string>
    <string name="name">name</string>
    <string name="date">date\n</string>
    <string name="todo" />
    <string name="feedback">feedback\n</string>
    <string name="title_activity_course_details">activity_course_details</string>
    <string name="title_activity_course_detail">activity_course_detail</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_course_detaisl">activity_course_detaisl</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>